Changed out icons to filled in ones, changed color scheme, corrected mobile overflow not working properly(not scrolling). Also added hover behavior on all icons except open-new-link

--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@
     
 }
 
+
+
 :root{
     box-sizing: border-box;
     margin:0;
@@ -82,13 +84,18 @@ body{
 
 .dash-container{
     flex: 1;
-    background-color: rgb(77, 202, 98);
+    background-color: rgb(0, 54, 134);
     height:100%;
     min-width:25%;
     justify-items: center;
+    min-height: 100vh;
+
 
     @media (max-width:350px){
         min-width:30%;
+    }
+    @media(max-width:1024px){
+        min-height:100%;
     }
 }
 
@@ -134,6 +141,10 @@ body{
     fill: red;
 }
 
+.dash-selector .icon:hover{
+    fill: aqua;
+}
+
 /* Sidebar */
 
 .dash-selectIcon{
@@ -177,7 +188,7 @@ body{
 .content-header{
     display:grid;
     grid-template:1fr/ 4fr 1fr;
-    background-color: red;
+    background-color: rgb(26, 101, 214);
 }
 
 .profile{
@@ -209,11 +220,12 @@ body{
 
 .content-main{
     display:grid;
-    grid-template: 1fr / 2.8fr 1.2fr ;
-    background-color: aqua;
-
+    grid-template: auto / 2.8fr 1.2fr ;
+    background-color: rgb(21, 250, 0);
+    overflow: scroll;
     @media(max-width:1024px){
-        grid-template: 3fr 1fr / 1fr ; 
+        grid-template: auto auto / 1fr ; 
+        grid-auto-rows: auto;
     }
 }
 
@@ -221,11 +233,13 @@ body{
     display:grid;
     grid-template:1fr 9fr/ 1fr;
     padding:1rem;
-    background-color: blue;
+    background-color: white;
 }
 
 .content-sidebar{
-    background-color: blueviolet;
+    display:grid;
+    grid-template:auto auto/auto;
+    background-color: rgb(6, 241, 241);
 }
 
 .content-tileBoard{
@@ -301,6 +315,7 @@ body{
     display:grid;
     grid-template:1fr 4fr/ 1fr;
     justify-content: center;
+    
 }
 
 .content-sidebar p{
